# openFLY

./: .buildinfo  .clang-format  .cmake-format  .gitignore  .gitmodules  .hdoc.toml  CMakeLists.txt  CMakePresets.json  ChangeLog-stub.html  ChangeLog.rst  FileGSD_test.gsd  README.md  README.rst  api.html  building.html  changelog.html  genindex.html  index.html  objects.inv  programmer.html  search.html  searchindex.js  todo.html  user.html  vcpkg.json
.doctrees/: ChangeLog-stub.doctree  api.doctree  building.doctree  changelog.doctree  environment.pickle  index.doctree  programmer.doctree  todo.doctree  user.doctree
.doctrees/api/: crystal_systems.doctree  env.doctree  io.doctree  kinetic.doctree  minimise.doctree  neighbour.doctree  potential.doctree  potentials.doctree  saddle.doctree  system.doctree  utility.doctree
.doctrees/programmer/: hacking.doctree  libfly.doctree  structure.doctree
.doctrees/user/: building.doctree  config.doctree  overview.doctree  quickstart.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  test.yml
_sources/: ChangeLog-stub.rst.txt  api.rst.txt  building.rst.txt  changelog.rst.txt  index.rst.txt  todo.rst.txt  user.rst.txt
_sources/api/: crystal_systems.rst.txt  env.rst.txt  io.rst.txt  kinetic.rst.txt  minimise.rst.txt  neighbour.rst.txt  potential.rst.txt  potentials.rst.txt  saddle.rst.txt  system.rst.txt  utility.rst.txt
_sources/programmer/: hacking.rst.txt  libfly.rst.txt  structure.rst.txt
_sources/user/: config.rst.txt  overview.rst.txt  quickstart.rst.txt
_static/: openfly.css
api/: crystal_systems.html  env.html  io.html  kinetic.html  minimise.html  neighbour.html  potential.html  potentials.html  saddle.html  system.html  utility.html
apps/: bench.cpp  carbon.cpp  geo.cpp  hydrogen.cpp  kim.cpp  kmc.cpp  main.cpp  openfly.cpp  skmc.cpp  skmcC.cpp  update.hpp
cluster/V1/: escape.csv
cluster/V2/: dis.csv  dis.no_h.csv  escape.csv
cmake/: GetVersion.cmake
data/: FeH.meam  library.meam  wen.eam.fs
docs/: Building.md  CMakeLists.txt  Doxyfile.in  api.rst  building.rst  changelog.rst  conf.py  index.rst  programmer.rst  requirements.txt  todo.rst
docs/api/: crystal_systems.rst  env.rst  io.rst  kinetic.rst  minimise.rst  neighbour.rst  potential.rst  potentials.rst  saddle.rst  system.rst  utility.rst
docs/user/: building.rst
examples/: CMakeLists.txt  README.md  main.cpp
examples/env/: geometry.cpp
examples/io/: gsd.cpp  io.cpp
examples/kinetic/: skmc.cpp
examples/neigh/: list.cpp
examples/system/: SoA.cpp  SoA_assign.cpp  VoS.cpp  atom.cpp
examples/utility/: defer.cpp  detected.cpp  static_assert_false.cpp
include/libfly/: test.hpp  version.hpp
include/libfly/env/: catalogue.hpp  geometry.hpp  heuristics.hpp  local.hpp  mechanisms.hpp
include/libfly/io/: gsd.hpp
include/libfly/kinetic/: basin.hpp  cache.hpp  skmc.hpp  superbasin.hpp
include/libfly/minimise/LBFGS/: lbfgs.hpp  lbfgs_core.hpp
include/libfly/neigh/: adjacent.hpp  list.hpp  sort.hpp
include/libfly/neighbour/: adjacent.hpp  list.hpp  sort.hpp
include/libfly/potential/: base.hpp  counter.hpp  generic.hpp
include/libfly/potential/EAM/: data.hpp  eam.hpp
include/libfly/potential/KIM/: kim.hpp
include/libfly/potential/MEAM/: meam.hpp
include/libfly/potential/MEAM/KIM/: helper.hpp  meam_c.hpp  meam_spline.hpp  meam_sw_spline.hpp  special.hpp  spline.hpp  utility.hpp  zbl.hpp
include/libfly/potential/ROT/: dimer.hpp
include/libfly/potentials/: base.hpp
include/libfly/saddle/: dimer.hpp  except.hpp  find.hpp  find2.hpp  find_sp.hpp  perturb.hpp  rotor.hpp
include/libfly/system/: SoA.hpp  VoS.hpp  adaptor.hpp  atom.hpp  box.hpp  combi.hpp  hessian.hpp  mechanisms.hpp  property.hpp  supercell.hpp  typemap.hpp
include/libfly/system/boxes/: hypergrid.hpp  orthorhombic.hpp  triclinic.hpp
include/libfly/utility/: asserts.hpp  core.hpp  current_function.hpp  data.hpp  lattice.hpp  random.hpp  spline.hpp  timeit.hpp  version.hpp
programmer/: hacking.html  libfly.html  structure.html
scripts/kim-api/: CMakeLists.txt  install.sh
scripts/plot/: arr.py  diss.py
shell/apple/: libomp.rb
src/: CMakeLists.txt  test.cpp
src/env/: catalogue.cpp  graph.hpp  heuristics.cpp  local.cpp
src/io/: gsd.cpp  gsd_helpers.hpp
src/kinetic/: basin.cpp  cache.cpp  superbasin.cpp
src/minimise/LBFGS/: lbfgs.cpp  lbfgs_core.cpp
src/neigh/: list.cpp
src/neighbour/: list.cpp
src/potential/EAM/: data.cpp  eam.cpp
src/potential/KIM/: kim.cpp
src/potential/MEAM/: meam.cpp
src/potential/MEAM/KIM/: meam_c.cpp
src/potential/ROT/: dimer.cpp
src/saddle/: dimer.cpp  find.cpp  perturb.cpp  rotor.cpp
src/system/boxes/: orthorhombic.cpp  triclinic.cpp
src/utility/: asserts.cpp  lattice.cpp  spline.cpp
tests/: CMakeLists.txt  version.cpp
tests/IO/: gsd.cpp
tests/adjacent/: adjacent.cpp
tests/env/: geometry.cpp  graph.cpp  heuristics.cpp  local.cpp
tests/neigh/: adjacent.cpp  list.cpp
tests/neighbour/: list.cpp
tests/potential/EAM/: data.cpp  eam.cpp
tests/system/: SoA.cpp  box.cpp  hessian.cpp  supercell.cpp  typemap.cpp
tests/system/boxes/: hypergrid.cpp  orthorhombic.cpp  triclinic.cpp
tests/utility/: core.cpp  lattice.cpp  spline.cpp  version.cpp
user/: building.html  config.html  overview.html  quickstart.html
